--- a/templates/_base_page.html
+++ b/templates/_base_page.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
-
-{{ title }}
-
+  {{ title }}
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
   <link rel="stylesheet" href="assets/css/main.css" />
 
   <script src="assets/js/jquery.min.js"></script>
@@ -13,20 +12,18 @@
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/exercises.js"></script>
-
-{{ custom_script }}
+  <script src={{ custom_script }}></script>
 
 </head>
+  <body onload="initialize(rand={{ rand }})" class="" data-new-gr-c-s-check-loaded="8.888.0" data-gr-ext-installed="">
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-<body>
-  <!-- Wrapper -->
-  <div id="wrapper">
-
-{{ header }}
-{{ menu }}
-{{ main }} 
-{{ footer }}
-
-  </div>  
-</body>
+      {% include '_header.html' %}
+      {{ main }}	 
+      {% include '_footer.html' %}
+    </div>
+    {% include '_menu.html' %}
+	
+  </body>
 </html>
