--- a/templates/_base_page.html
+++ b/templates/_base_page.html
@@ -15,7 +15,7 @@
   <script src={{ custom_script }}></script>
 
 </head>
-  <body onload="initialize(rand={{ rand }})" class="" data-new-gr-c-s-check-loaded="8.888.0" data-gr-ext-installed="">
+  {{ bodystuff }}
     <!-- Wrapper -->
     <div id="wrapper">
 
