--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+Title<title>Phonetics workbook</title>TitleBody<body class="" data-new-gr-c-s-check-loaded="8.888.0" data-gr-ext-installed="">Body
     <!-- Main -->
     <div id="main">
       <div class="inner">
