Fixed header and nametourl

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,13 +1,18 @@
 
     <!-- Header -->
     <header id="header">
-      <div class="inner">
-	    <!-- Nav -->
-	    <nav>
+	  <div class="inner">
+	  <!-- Logo -->
+	  <a href="index.html" class="logo">
+	    <span class="symbol"><img src="media/images/logo.svg" alt=""></span>
+	    <span class="title">Phonwork</span>
+	  </a>
+	  <!-- Nav -->
+	  <nav>
 	    <ul>
 	      <li><a href="#menu">Menu</a></li>
 	    </ul>
-	    </nav>
+	  </nav>
       </div>
     </header>
 
