KJ - added images and text to index.html, and links for menu.  Section_xxx.html files are yet to come.

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -2,18 +2,13 @@
       <h2>Menu</h2>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <!-- <li><a href="intro.php">1. Intro</a></li> -->
-        <!-- <li><a href="voice.php">2. Voice</a></li> -->
-        <!-- <li><a href="vowels.php">3. Vowels</a></li> -->
-        <!-- <li><a href="place.php">4. Place of Articulation</a></li> -->
-        <!-- <li><a href="manner.php">5. Manner of Articulation</a></li> -->
-        <!-- <li><a href="voice2.php">6. Voice II</a></li> -->
-        <!-- <li><a href="airstream.php">7. Airstream Mechanisms</a></li> -->
-        <!-- <li><a href="complex.php">8. Complex Sounds</a></li> -->
-        <!-- <li><a href="prosody.php">9. Prosody</a></li> -->
-        <!-- <li><a href="motor.php">10. Speech Motor Control</a></li> -->
-        <!-- <li><a href="phonology.php">11. Phonology</a></li> -->
-        <!-- <li><a href="perception.php">12. Speech Perception</a></li> -->
-        <!-- <li><a href="certs.php">Copies of certificates</a></li> -->
+        <li><a href="Section_Start_here.html">1. Start here</a></li>
+        <li><a href="Section_The_IPA.html">2. The IPA</a></li>
+        <li><a href="Section_Language_Examples.html">3. Language Examples</a></li>
+        <li><a href="Section_Acoustic_theory.html">4. Acoustic Phonetics</a></li>
+        <li><a href="Section_Prosody.html">5. Prosody</a></li>
+        <li><a href="Section_Articulatory_Phonetics.html">6. Articulatory Phonetics</a></li>
+	<li><a href="Section_Aerodynamics.html">7. Aerodynamic Phonetics</a></li>
+	<li><a href="Section_Auditory_Phonetics">8. Auditory Phonetics</a></li>
       </ul>
     <!--</div><a class="close" href="#menu">Close</a></nav>-->
