--- a/templates/index.html
+++ b/templates/index.html
@@ -3,138 +3,101 @@ Title<title>Phonetics workbook</title>TitleBody<body class="" data-new-gr-c-s-ch
     <div id="main">
       <div class="inner">
 	<header>
-	  <h1>This phonetics workbook is a collection of on-line exercises for
-	    your self-study or to accompany your course in phonetics.
+	  <h1>A phonetics workbook.
 	  </h1>
-	  <p>These exercises are designed to accompany a combination of
+	  <p>These exercises are organized by the different "models" that phoneticians use to study speech. 
+They are designed to accompany a combination of
 	    different college textbooks, including Ashby and
 	    Maidment's (2005) <i>Introduction to Phonetic Science</i>,
 	    Ladefoged and Johnson's (2015) <i>A Course in
 	    Phonetics</i>, Johnson's (2012) <i>Acoustic and Auditory
 	    Phonetics</i>, and Gick, Wilson & Derrick's
-	    (2013) <i>Articulatory Phonetics</i>. <a href="#acknowledgements">Acknowledgements</a></p>
+	    (2013) <i>Articulatory Phonetics</i>. 
+
+<a href="#acknowledgements">Acknowledgements</a></p>
 	</header>
 	
 	<section class="tiles">
 	  <article class="style1">
-	    <span class="image"><img src="images/VisSpeechCons-01.png" alt="" /></span>
-	    <a href="intro.php">
-	      <h2>Intro</h2>
+	    <span class="image"><img src="media/images/A_M_Fig3_1.png" alt="" /></span>
+	    <a href="Section_Start_here.html">
+	      <h2>Start Here</h2>
 	      <div class="content">
-		<p>1. Getting oriented with the International Phonetic Alphabet, and acoustic phonetics.</p>
+		<p>1. Basics of phonetic transcription and vocal tract anatomy.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
 	  <article class="style2">
-	    <span class="image"><img src="images/top_view_larynx.png" alt="" /></span>
-	    <a href="voice.php">
-	      <h2>Voice</h2>
+	    <span class="image"><img src="media/images/VisSpeechCons-01.png" alt="" /></span>
+	    <a href="Section_The_IPA.html">
+	      <h2>The IPA</h2>
 	      <div class="content">
-		<p>2. Laryngeal anatomy and function, digital signals.</p>
+		<p>2. The International Phonetic Alphabet.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
 	  <article class="style3">
-	    <span class="image"><img src="images/ipa_vowels.png" alt="" /></span>
-	    <a href="vowels.php">
-	      <h2>Vowels</h2>
+	    <span class="image"><img src="media/images/ipa_vowels.png" alt="" /></span>
+	    <a href="Section_Language_Examples.html">
+	      <h2>Language examples</h2>
 	      <div class="content">
-		<p>3. Cardinal vowels, tongue muscles, and vowel formants.</p>
+		<p>3. Transcription exercises for many languages.</p>
 	      </div>
 	    </a>
 	  </article>
 
 	  <article class="style4">
-	    <span class="image"><img src="images/A_M_Fig3_1.png" alt="" /></span>
-	    <a href="place.php">
-	      <h2>Place of articulation</h2>
+	    <span class="image"><img src="media/images/acoustic_demo.png" alt="" /></span>
+	    <a href="Section_Acoustic_theory.html">
+	      <h2>Acoustic Phonetics</h2>
 	      <div class="content">
-		<p>4. IPA transcription, intrinsic muscles of the tongue, source-filter theory of consonants.</p>
+		<p>4. The 'source-filter' model of speech acoustics.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
 	  <article class="style5">
-	    <span class="image"><img src="images/pistons_and_valves.png" alt="" /></span>
-	    <a href="manner.php">
-	      <h2>Manner of articulation</h2>
+	    <span class="image"><img src="media/images/egg_stroboscope-01.png" alt="" /></span>
+	    <a href="Section_Prosody.html">
+	      <h2>Prosody</h2>
 	      <div class="content">
-		<p>5. IPA transcription, aerodynamics, acoustic side cavities.</p>
+		<p>5. Tone, quantity, and other prosodic features.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
 	  <article class="style6">
-	    <span class="image"><img src="images/egg_stroboscope-01.png" alt="" /></span>
-	    <a href="voice2.php">
-	      <h2>Phonation</h2>
+	    <span class="image"><img src="media/images/guess.png" alt="" /></span>
+	    <a href="Section_Articulatory_Phonetics.html">
+	      <h2>Articulatory Phonetics</h2>
 	      <div class="content">
-		<p>6. Voice onset time and phonation types.</p>
+		<p>6. Anatomy and motor control of speech.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
 	  <article class="style2">
-	    <span class="image"><img src="images/extrinsic_laryngeal_muscles-01.png" alt="" /></span>
-	    <a href="airstream.php">
-	      <h2>Airstream mechanisms</h2>
+	    <span class="image"><img src="media/images/pistons_and_valves.png" alt="" /></span>
+	    <a href="Section_Aerodynamics.html">
+	      <h2>Aerodynamic Phonetics</h2>
 	      <div class="content">
-		<p>7. Glottalic, and velaric consonants.</p>
+		<p>7. Aerodynamic aspects of speech.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
 	  <article class="style3">
-	    <span class="image"><img src="images/acoustic_demo.png" alt="" /></span>
-	    <a href="complex.php">
-	      <h2>Complex sounds</h2>
+	    <span class="image"><img src="media/images/acoustic_demo.png" alt="" /></span>
+	    <a href="Section_Auditory_Phonetics.html">
+	      <h2>Auditory Phonetics</h2>
 	      <div class="content">
-		<p>8. Multiply articulated sounds.</p>
+		<p>8. Auditory system and speech perception.</p>
 	      </div>
 	    </a>
 	  </article>
 	  
-	  <article class="style1">
-	    <span class="image"><img src="images/pic09.jpg" alt="" /></span>
-	    <a href="prosody.php">
-	      <h2>Prosody</h2>
-	      <div class="content">
-		<p>9. Pitch, timing, and amplitude Above the segment.</p>
-	      </div>
-	    </a>
-	  </article>
-	  
-	  <article class="style5">
-	    <span class="image"><img src="images/guess.png" alt="" /></span>
-	    <a href="motor.php">
-	      <h2>Speech motor control</h2>
-	      <div class="content">
-		<p>10. Coordination and gestures.</p>
-	      </div>
-	    </a>
-	  </article>
-	  
-	  <article class="style6">
-	    <span class="image"><img src="images/pic11.jpg" alt="" /></span>
-	    <a href="phonology.php">
-	      <h2>Phonology</h2>
-	      <div class="content">
-		<p>11. Features and processes.</p>
-	      </div>
-	    </a>
-	  </article>
-	  
-	  <article class="style4">
-	    <span class="image"><img src="images/pic12.jpg" alt="" /></span>
-	    <a href="perception.php">
-	      <h2>Speech perception</h2>
-	      <div class="content">
-		<p>12. Audition and perception of speech.</p>
-	      </div>
-	    </a>
-	  </article>
 	</section>
 	<a name="acknowledgements"></a>
 
