updated image and sound tags in the templates with these perl one-liners:
perl -pi.bak -e 's/\"images/\"media\/images/g' *.html
perl -pi.bak -e 's/\"sounds/\"media\/sounds/g' *.html}

--- a/templates/Arabic_pharyngealization.html
+++ b/templates/Arabic_pharyngealization.html
@@ -4,7 +4,7 @@ Title<title>Arabic pharyngealization</title>TitleBody<body onload="initialize()"
       <div class="inner">
 	<h1>Arabic (Syrian) pharyngealization</h1>
 
-	<span class="image fit"><img src="sounds/arabic/arabic.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/arabic/arabic.gif" width="400px"></span>
 
 	<p>What Arabic word is this?</p>
 
