--- a/templates/Bruu.html
+++ b/templates/Bruu.html
@@ -4,7 +4,7 @@ Title<title>Bruu</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Bruu phonation contrasts</h1>
 
-	<span class="image fit"><img src="sounds/bruu/bru.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/bruu/bru.gif" width="400px"></span>
 
 	<p>What Bruu word is this?</p>
 
