--- a/templates/Formants_an_i_model.html
+++ b/templates/Formants_an_i_model.html
@@ -5,7 +5,7 @@ Title<title>Formants in an [i] model</title>TitleBody<body onload="initialize(0)
 	<h1>3.11 Formants in an [i] model</h1>
 
 
-	 <span class="image fit"><img src="images/ex/i_tube.png" width="400px"></span>
+	 <span class="image fit"><img src="media/images/ex/i_tube.png" width="400px"></span>
 
 	 <p>For this exercise assume:  
 <i>l<sub>b</sub></i> = 8.5 cm, 
