--- a/templates/Formants_of_a.html
+++ b/templates/Formants_of_a.html
@@ -5,7 +5,7 @@ Title<title>Formants of [a]</title>TitleBody<body onload="initialize(0)">Body
 	<h1>3.8 Formants of /ɑ/</h1>
 
 
-	 <span class="image fit"><img src="images/ex/a_tube.png" width="400px"></span>
+	 <span class="image fit"><img src="media/images/ex/a_tube.png" width="400px"></span>
 
 	 <p>For this exercise assume that l<sub>b</sub> is 8 cm, and the overall length of the vocal tract (L) is 17 cm, and that the speed of sound is 35,000 cm/sec (a calculator may be useful).</p>
 	<p><span id="question"></span>
