--- a/templates/French_semi_vowels.html
+++ b/templates/French_semi_vowels.html
@@ -4,7 +4,7 @@ Title<title>French semi vowels</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>French Semivowels</h1>
 
-	<span class="image fit"><img src="sounds/french/vm.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/french/vm.gif" width="400px"></span>
 
 	<p>What French word is this?</p>
 
