--- a/templates/Ibibio_labio_velar_stops.html
+++ b/templates/Ibibio_labio_velar_stops.html
@@ -4,7 +4,7 @@ Title<title>Ibibio labio-velar stops</title>TitleBody<body onload="initialize()"
       <div class="inner">
 	<h1>Ibibio labio-velars</h1>
 
-	<span class="image fit"><img src="sounds/ibibio/ibibio.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/ibibio/ibibio.gif" width="400px"></span>
 
 	<p>What Ibibio word is this?</p>
 
