--- a/templates/Igbo_VOT_and_implosives.html
+++ b/templates/Igbo_VOT_and_implosives.html
@@ -4,7 +4,7 @@ Title<title>Igbo VOT and implosives</title>TitleBody<body onload="initialize()">
       <div class="inner">
 	<h1>Igbo VOT and Implosives</h1>
 
-	<span class="image fit"><img src="sounds/igbo/igm.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/igbo/igm.gif" width="400px"></span>
 
 	<p>What Igbo word is this?</p>
 
