--- a/templates/Korean_stops_and_s.html
+++ b/templates/Korean_stops_and_s.html
@@ -4,7 +4,7 @@ Title<title>Korean stops and /s/</title>TitleBody<body onload="initialize()">Bod
       <div class="inner">
 	<h1>Korean Consonants</h1>
 
-	<span class="image fit"><img src="sounds/korean/korean.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/korean/korean.gif" width="400px"></span>
 
 	<p>What Korean word is this?</p>
 
