--- a/templates/Mazatec_phonation.html
+++ b/templates/Mazatec_phonation.html
@@ -4,7 +4,7 @@ Title<title>Mazatec phonation</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Mazatec phonation contrasts</h1>
 
-	<span class="image fit"><img src="sounds/mazatec/mazatec.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/mazatec/mazatec.gif" width="400px"></span>
 
 	<p>What Mazatec word is this?</p>
 
