--- a/templates/Quantity_Italian.html
+++ b/templates/Quantity_Italian.html
@@ -4,7 +4,7 @@ Title<title>Quantity in Italian</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Quantity contrasts in Italian</h1>
 
-	<span class="image fit"><img src="sounds/italian/im.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/italian/im.gif" width="400px"></span>
 
 	<p>What Italian word is this?</p>
 
