--- a/templates/Review_of_vocal_tract_terms.html
+++ b/templates/Review_of_vocal_tract_terms.html
@@ -4,7 +4,7 @@ Title<title>Review of vocal tract terms</title>TitleBody<body onload="initialize
       <div class="inner">
 	<h1>Review vocal tract terms</h1>
 	
-	<span class="image fit"><img src="images/ex/A_M_Fig3_1_2.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/A_M_Fig3_1_2.png" width="400px"></span>
 	
 	<p>Fill in the name of number: <span id="question"></span>
 	  <input id="answerbox" type="text" onkeydown="if (event.keyCode == 13) check_answer()" placeholder="type answer here">
