--- a/templates/Russian_palatalization.html
+++ b/templates/Russian_palatalization.html
@@ -4,7 +4,7 @@ Title<title>Russian palatalization</title>TitleBody<body onload="initialize()">B
       <div class="inner">
 	<h1>Russian palatalization</h1>
 
-	<span class="image fit"><img src="sounds/russian/russian.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/russian/russian.gif" width="400px"></span>
 
 	<p>What Russian word is this?</p>
 
