--- a/templates/Saying_the_Primary_CVs.html
+++ b/templates/Saying_the_Primary_CVs.html
@@ -4,7 +4,7 @@ Title<title>Saying the Primary CVs</title>TitleBody<body onload="initialize()">B
       <div class="inner">
 	<h1>Saying the Primary Cardinal Vowels</h1>
 
-	<span class="image fit"><img src="images/ex/primary.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/primary.png" width="400px"></span>
 
 	<p>Try saying cardinal vowel number <span id="question"></span>.</p>
 
