--- a/templates/Secondary_Cardinal_Vowels.html
+++ b/templates/Secondary_Cardinal_Vowels.html
@@ -4,7 +4,7 @@ Title<title>Secondary Cardinal Vowels</title>TitleBody<body onload="initialize()
       <div class="inner">
 	<h1>The Secondary Cardinal Vowels</h1>
 
-	<span class="image fit"><img src="images/ex/secondary.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/secondary.png" width="400px"></span>
 
 	<p>The secondary cardinal vowels are numbered from 9 to 18, as in the figure.  Listen to the sound and 
 decide which cardinal vowel it is.  Enter the number as your answer.</p>
