--- a/templates/Sindhi_stops.html
+++ b/templates/Sindhi_stops.html
@@ -4,7 +4,7 @@ Title<title>Sindhi stops</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Sindhi stops</h1>
 
-	<span class="image fit"><img src="sounds/sindhi/sindhi.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/sindhi/sindhi.gif" width="400px"></span>
 
 	<p>What Sindhi word is this?</p>
 
