--- a/templates/Thai_stops.html
+++ b/templates/Thai_stops.html
@@ -4,7 +4,7 @@ Title<title>Thai stops</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Thai stops</h1>
 
-	<span class="image fit"><img src="sounds/thai/thai.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/thai/thai.gif" width="400px"></span>
 
 	<p>What Thai word is this?</p>
 
