--- a/templates/Toda_rhotics.html
+++ b/templates/Toda_rhotics.html
@@ -4,7 +4,7 @@ Title<title>Toda rhotics</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Toda Rhotics</h1>
 
-	<span class="image fit"><img src="sounds/toda/toda4.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/toda/toda4.gif" width="400px"></span>
 
 	<p>What Toda word is this?</p>
 
