--- a/templates/Tone_Ibibio.html
+++ b/templates/Tone_Ibibio.html
@@ -4,7 +4,7 @@ Title<title>Tone in Ibibio</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Tone in Ibibio</h1>
 
-	<span class="image fit"><img src="sounds/ibibio/im.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/ibibio/im.gif" width="400px"></span>
 
 	<p>What Ibibio word is this?</p>
 
