--- a/templates/Transcribe_vowels.html
+++ b/templates/Transcribe_vowels.html
@@ -4,7 +4,7 @@ Title<title>Transcribe vowels</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Transcribe vowels</h1>
 
-	<span class="image fit"><img src="images/vowels.gif" width="400px"></span>
+	<span class="image fit"><img src="media/images/vowels.gif" width="400px"></span>
 
 	<p>Click "play" to hear a vowel.  How do you transcribe it? <br /> (Enter the IPA transcription of the vowel, in square brackets)</p>
 
