--- a/templates/Vocal_Tract_Resonance.html
+++ b/templates/Vocal_Tract_Resonance.html
@@ -6,8 +6,8 @@ Title<title>Vocal Tract Resonance</title>TitleBody<body onload="initialize(1)">B
 
 	<p>Use the 2L or the 4L formula to calculate the resonances. <br>
 	  <table>
-	    <tr><td>A tube closed at both ends.</td><td><img src="images/ex/2L.png" width="25%"></td></tr>
-	    <tr><td>A tube open at one end.</td><td><img src="images/ex/4L.png" width="30%"></td></tr>
+	    <tr><td>A tube closed at both ends.</td><td><img src="media/images/ex/2L.png" width="25%"></td></tr>
+	    <tr><td>A tube open at one end.</td><td><img src="media/images/ex/4L.png" width="30%"></td></tr>
 	  </table>
 
 	   <span id="question"></span>
