--- a/templates/Vocal_tract_tour.html
+++ b/templates/Vocal_tract_tour.html
@@ -6,7 +6,7 @@ Title<title>Vocal tract tour</title>TitleBody<body onload="initialize()">Body
 	
 	<p>Fill in the blanks on this figure.</p>
 	
-	<span class="image fit"><img src="images/ex/ex1_1.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/ex1_1.png" width="400px"></span>
 	
 	<p>Fill in the name of number: <span id="question"></span>
 	  <input id="answerbox" type="text" onkeydown="if (event.keyCode == 13) check_answer()" placeholder="type answer here">
