--- a/templates/Zulu_clicks.html
+++ b/templates/Zulu_clicks.html
@@ -4,7 +4,7 @@ Title<title>Zulu clicks</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Zulu clicks</h1>
 
-	<span class="image fit"><img src="sounds/zulu/zm.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/zulu/zm.gif" width="400px"></span>
 
 	<p>What Zulu word is this?</p>
 
