--- a/templates/ten_wasps_waveform.html
+++ b/templates/ten_wasps_waveform.html
@@ -6,7 +6,7 @@ Title<title>ten wasps waveform</title>TitleBody<body onload="initialize()">Body
 
 	<p>The waveform below is of the phrase <em>Tom saw ten wasps</em>. Answer the following questions about the waveform portions labelled (a) - (g) in the figure.</p>
 
-	<span class="image fit"><img src="images/ex/ex1_6.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/ex1_6.png" width="400px"></span>
 
 	<p><span id="question"></span>
 	  <input id="answerbox" type="text" onkeydown="if (event.keyCode == 13) check_answer()" placeholder="type answer here">
