--- a/templates/Bura_labialization.html
+++ b/templates/Bura_labialization.html
@@ -6,7 +6,7 @@ Title<title>Bura labialization</title>TitleBody<body onload="initialize()">Body
 
 <p>Bura is an Afro-Asiatic language of the Chadic family (Biu-Mandara branch) spoken by approximately 250,000 people in Nigeria. The two major dialects are Pela (Hill Bura) and Hyilhawul (Plain Bura).</p>
 
-	<span class="image fit"><img src="sounds/bura/bura.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/bura/bura.gif" width="400px"></span>
 
 	<p>What Bura word is this?</p>
 
