--- a/templates/Cantonese_Tones.html
+++ b/templates/Cantonese_Tones.html
@@ -4,7 +4,7 @@ Title<title>Cantonese Tones</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Tone in Cantonese</h1>
 
-	<span class="image fit"><img src="sounds/cantonese/ca.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/cantonese/ca.gif" width="400px"></span>
 
 	<p>What Cantonese word is this?</p>
 
