--- a/templates/Formants_two_tube_models.html
+++ b/templates/Formants_two_tube_models.html
@@ -5,7 +5,7 @@ Title<title>Formants in two-tube models</title>TitleBody<body onload="initialize
 	<h1>3.9 Formants in two-tube models</h1>
 
 
-	 <span class="image fit"><img src="images/ex/a_tube.png" width="400px"></span>
+	 <span class="image fit"><img src="media/images/ex/a_tube.png" width="400px"></span>
 
 	 <p>For this exercise assume that <i>l<sub>b</sub></i> is 8.5 cm and the overall length of the vocal tract (L) is 16 cm and that the speed of sound is 35,000 cm/sec (a calculator may be useful).</p>
 	<p><span id="question"></span>
