--- a/templates/Hmong_tones.html
+++ b/templates/Hmong_tones.html
@@ -4,7 +4,7 @@ Title<title>Hmong tones</title>TitleBody<body onload="initialize()">Body
       <div class="inner">
 	<h1>Hmong Tone</h1>
 
-	<span class="image fit"><img src="sounds/hmong/hmong.gif" width="400px"></span>
+	<span class="image fit"><img src="media/sounds/hmong/hmong.gif" width="400px"></span>
 
 	<p>What Hmong word is this?</p>
 
