--- a/templates/Primary_Cardinal_Vowels.html
+++ b/templates/Primary_Cardinal_Vowels.html
@@ -4,7 +4,7 @@ Title<title>Primary Cardinal Vowels</title>TitleBody<body onload="initialize()">
       <div class="inner">
 	<h1>The Primary Cardinal Vowels</h1>
 
-	<span class="image fit"><img src="images/ex/primary.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/primary.png" width="400px"></span>
 
 	<p>The primary cardinal vowels are numbered from 1 to 8, as in the figure.  Listen to the sound and 
 decide which cardinal vowel it is.  Enter the number as your answer.</p>
