--- a/templates/Saying_the_Secondary_CVs.html
+++ b/templates/Saying_the_Secondary_CVs.html
@@ -4,7 +4,7 @@ Title<title>Saying the Secondary CVs</title>TitleBody<body onload="initialize()"
       <div class="inner">
 	<h1>Saying the Secondary Cardinal Vowels</h1>
 
-	<span class="image fit"><img src="images/ex/secondary.png" width="400px"></span>
+	<span class="image fit"><img src="media/images/ex/secondary.png" width="400px"></span>
 
 	<p>Try saying cardinal vowel number <span id="question"></span>.</p>
 
