KJ: fixed errors in several .js files

--- a/templates/Spectrogram_reading.html
+++ b/templates/Spectrogram_reading.html
@@ -2,7 +2,7 @@ Title<title>Spectrogram reading</title>TitleBody<body onload="initialize()">Body
 	
     <div id="main">
       <div class="inner">
-	<h1>8.6 Complex segments: spectrogram reading</h1>
+	<h1>Complex segments: spectrogram reading</h1>
 <p></p>
 
 	 <span class="image fit"> <img id="image_question" width="400px"></span>
