Fixed section indexes

--- a/templates/_base_page.html
+++ b/templates/_base_page.html
@@ -11,7 +11,9 @@
   <script src="assets/js/skel.min.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
+  {% if exercise %}
   <script src="assets/js/exercises.js"></script>
+  {% endif %}
   <script src={{ custom_script }}></script>
 
 </head>
