--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -1,4 +1,4 @@
-	<nav id="menu"><!--div class="inner"-->
+	<nav id="menu"><!--<div class="inner">-->
       <h2>Menu</h2>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -11,4 +11,5 @@
 	<li><a href="Section_Aerodynamics.html">7. Aerodynamic Phonetics</a></li>
 	<li><a href="Section_Auditory_Phonetics">8. Auditory Phonetics</a></li>
       </ul>
-    <!--</div><a class="close" href="#menu">Close</a></nav>-->
+    <!--</div>--><a class="close" href="#menu">Close</a>
+	</nav>
