Hand corrected some templates of files, and the Bell's visible speech .js file.

--- a/templates/Formants_of_a.html
+++ b/templates/Formants_of_a.html
@@ -2,7 +2,7 @@ Title<title>Formants of [a]</title>TitleBody<body onload="initialize(0)">Body
 	
     <div id="main">
       <div class="inner">
-	<h1>3.8 Formants of /ɑ/</h1>
+	<h1>Formants of /ɑ/</h1>
 
 
 	 <span class="image fit"><img src="media/images/ex/a_tube.png" width="400px"></span>
