--- a/templates/Formants_two_tube_models.html
+++ b/templates/Formants_two_tube_models.html
@@ -2,7 +2,7 @@ Title<title>Formants in two-tube models</title>TitleBody<body onload="initialize
 	
     <div id="main">
       <div class="inner">
-	<h1>3.9 Formants in two-tube models</h1>
+	<h1>Formants in two-tube models</h1>
 
 
 	 <span class="image fit"><img src="media/images/ex/a_tube.png" width="400px"></span>
