--- a/templates/Mam_place_of_articulation.html
+++ b/templates/Mam_place_of_articulation.html
@@ -2,7 +2,7 @@ Title<title>Mam place of articulation</title>TitleBody<body onload="initialize()
 	
     <div id="main">
       <div class="inner">
-	<h1>4.12 Mam Place of Articulation</h1>
+	<h1>Mam Place of Articulation</h1>
 <p>Mam is a Mayan language spoken in Guatemala.  This exercise is by Karee Garvin and Eric Wilbanks</p>
 
 	 <span class="image fit"> <img id="image_question" width="400px"></span>
