--- a/templates/Nafaanra_place_of_articulation.html
+++ b/templates/Nafaanra_place_of_articulation.html
@@ -2,7 +2,7 @@ Title<title>Nafaanra place of articulation</title>TitleBody<body onload="initial
 	
     <div id="main">
       <div class="inner">
-	<h1>8.2 Nafaanra Place of Articulation</h1>
+	<h1>Nafaanra Place of Articulation</h1>
 <p>Nafannra is a Niger-Congo language spoken in Ghana. Listen for the doubly articulated stops. This exercise is by Karee Garvin and Eric Wilbanks</p>
 
 	 <span class="image fit"> <img id="image_question" width="400px"></span>
