--- a/templates/Perturbation_theory.html
+++ b/templates/Perturbation_theory.html
@@ -2,7 +2,7 @@ Title<title>Perturbation theory</title>TitleBody<body onload="initialize()">Body
 	
     <div id="main">
       <div class="inner">
-	<h1>3.10 Perturbation Theory</h1>
+	<h1>Perturbation Theory</h1>
 
 
 	 <span class="image fit"><img src="media/images/ex/F2_standing_wave.png" width="400px"></span>
