--- a/templates/Vocal_Tract_Resonance.html
+++ b/templates/Vocal_Tract_Resonance.html
@@ -2,7 +2,7 @@ Title<title>Vocal Tract Resonance</title>TitleBody<body onload="initialize(1)">B
 	
     <div id="main">
       <div class="inner">
-	<h1>3.3 Resonance in uniform tubes</h1>
+	<h1>Resonance in uniform tubes</h1>
 
 	<p>Use the 2L or the 4L formula to calculate the resonances. <br>
 	  <table>
