--- a/templates/Vowel_Muscles.html
+++ b/templates/Vowel_Muscles.html
@@ -2,7 +2,7 @@ Title<title>Vowel Muscles</title>TitleBody<body onload="initialize()">Body
 	
     <div id="main">
       <div class="inner">
-	<h1>3.7 Muscles involved in vowel production</h1>
+	<h1>Muscles involved in vowel production</h1>
 
 
 	 <span class="image fit"> <img id="image_question" width="400px"></span>
