--- a/templates/Formants_an_i_model.html
+++ b/templates/Formants_an_i_model.html
@@ -2,7 +2,7 @@ Title<title>Formants in an [i] model</title>TitleBody<body onload="initialize(0)
 	
     <div id="main">
       <div class="inner">
-	<h1>3.11 Formants in an [i] model</h1>
+	<h1>Formants in an [i] model</h1>
 
 
 	 <span class="image fit"><img src="media/images/ex/i_tube.png" width="400px"></span>
