Search will need to have URL getter changed when ported over to official URL

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -1,6 +1,9 @@
 	<nav id="menu"><!--<div class="inner">-->
+	  <form method="get" action="file:///C:/Users/Nuanc/Documents/2021-2022/phonwork/phonwork/site/search">
+        <input type="search" name="q" id="menuSearch" placeholder="Exercise Search.." title="Type in an exercise">
+      </form>
       <h2>Menu</h2>
-      <ul>
+      <ul id="myMenu"> 
         <li><a href="index.html">Home</a></li>
         <li><a href="Section_Start_here.html">1. Start here</a></li>
         <li><a href="Section_The_IPA.html">2. The IPA</a></li>
