--- a/templates/_section.html
+++ b/templates/_section.html
@@ -14,7 +14,7 @@
     <div id="wrapper">
       
     {% include '_header.html' %}
-      
+    
     {% include '_menu.html' %}
     <!-- Main -->
     <div id="main">
@@ -48,6 +48,7 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/search.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
