--- a/templates/Nepali_stops.html
+++ b/templates/Nepali_stops.html
@@ -3,25 +3,53 @@ Title<title>Nepali</title>TitleBody<body onload="initialize()">Body
     <div id="main">
       <div class="inner">
 	<h1>Nepali, four-way stop contrast</h1>
-<span class="IPA">
-	<table style="width: 100%">
-	  <tr><td>[tʰal]</td><td>'plate'</td>
-	      <td>[kʰam]</td><td>'envelope'</td>
-	  </tr>
-	  <tr><td>[tara]</td><td>'star'</td>
-	      <td>[kam]</td><td>'work'</td>
-	  </tr>
-	  <tr><td>[dal]</td><td>'lentils'</td>
-	      <td>[gaf]</td><td>'chit chat (n)'</td>
-	  </tr>
-	  <tr><td>[dʱan]</td><td>'uncooked rice'</td>
-	      <td>[gʱar]</td><td>'house'</td>
-	  </tr>
-	  <tr><td>[dudʱ]</td><td>'milk'</td>
-	      <td></td><td></td>
-	  </tr>
-	  </table>
-</span>
+	<span class="IPA">
+		<table class="exercise">
+			<thead>
+				<tr>
+					<th>Dental<br>Stop</th>
+					<th>Velar<br>Stop</th>
+				</tr>
+			</thead>
+			<tr>
+				<td>tʰal</td>
+				<td>kʰam</td>
+			</tr>
+			<tr class="gloss">
+				<td>'plate'</td>
+				<td>'envelope'</td>
+			</tr>
+			<tr>
+				<td>tara</td>
+				<td>kam</td>
+			</tr>
+			<tr class="gloss">
+				<td>'star'</td>
+				<td>'work'</td>
+			</tr>
+			<tr><td>dal</td>
+				<td>gaf</td>
+			</tr>
+			<tr class="gloss">
+				<td>'lentils'</td>
+				<td>'chit chat (n)'</td>
+			</tr>
+			<tr><td>dʱan</td>
+				<td>gʱar</td>
+			</tr>
+			<tr class="gloss">
+				<td>'uncooked rice'</td>
+				<td>'house'</td>
+			</tr>
+			<tr><td>dudʱ</td>
+				<td></td><td></td>
+			</tr>
+			<tr class="gloss">
+				<td>'milk'</td>
+				<td></td><td></td>	
+			</tr>
+		</table>
+	</span>
 <p>audio files provided by Martha Schwarz</p>
 <p><input id="audio_questions" type="button" onclick="document.getElementById('theaudio').play();document.getElementById('answerbox').focus();" value="play"></p>
 
