--- a/templates/Toda_rhotics.html
+++ b/templates/Toda_rhotics.html
@@ -4,6 +4,48 @@ Title<title>Hindi Stops - transcription</title>TitleBody<body onload="initialize
       <div class="inner">
 	<h1>Toda Rhotics</h1>
 
+	<span class="IPA">
+		<table class="exercise">
+			<tr>
+				<td>tʰal</td>
+				<td>kʰam</td>
+			</tr>
+			<tr class="gloss">
+				<td>'plate'</td>
+				<td>'envelope'</td>
+			</tr>
+			<tr>
+				<td>tara</td>
+				<td>kam</td>
+			</tr>
+			<tr class="gloss">
+				<td>'star'</td>
+				<td>'work'</td>
+			</tr>
+			<tr><td>dal</td>
+				<td>gaf</td>
+			</tr>
+			<tr class="gloss">
+				<td>'lentils'</td>
+				<td>'chit chat (n)'</td>
+			</tr>
+			<tr><td>dʱan</td>
+				<td>gʱar</td>
+			</tr>
+			<tr class="gloss">
+				<td>'uncooked rice'</td>
+				<td>'house'</td>
+			</tr>
+			<tr><td>dudʱ</td>
+				<td></td><td></td>
+			</tr>
+			<tr class="gloss">
+				<td>'milk'</td>
+				<td></td><td></td>	
+			</tr>
+		</table>
+	</span>
+
 	<span class="image fit"><img src="media/sounds/toda/toda4.gif" width="400px"></span>
 
 	<p>What Toda word is this?</p>
