--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -12,7 +12,7 @@
         <li><a href="Section_Prosody.html">5. Prosody</a></li>
         <li><a href="Section_Articulatory_Phonetics.html">6. Articulatory Phonetics</a></li>
 	<li><a href="Section_Aerodynamics.html">7. Aerodynamic Phonetics</a></li>
-	<li><a href="Section_Auditory_Phonetics">8. Auditory Phonetics</a></li>
+	<li><a href="Section_Auditory_Phonetics.html">8. Auditory Phonetics</a></li>
       </ul>
     <!--</div>--><a class="close" href="#menu">Close</a>
 	</nav>
