--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -10,7 +10,7 @@
 	  </ul>
 	</section>
 	<ul class="copyright">
-	  <li>&copy; Keith Johnson. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+	  <li>&copy; Keith Johnson. All rights reserved</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 	</ul>
       </div>
     </footer>
