--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@ They are designed to accompany a combination of
 	was produced by Peter and Jenny Ladefoged and distributed with
 	Peter's "A Course in Phonetics". (They wisely never gave the
 	rights to these materials to the publisher.) See
-	the <a href="https://linguistics.berkeley.edu/acip">webpage for
+	the <a href="https://linguistics.berkeley.edu/acip/">webpage for
 	"Course"</a> for more exercises.  Additional acknowledgements
 	are given on the pages in Phonwork where donated or adapted material is
 	used.  Many thanks to Patricia Ashby and Maria Josep Sole
