Search URL update
Reference https://github.com/PhonWork/phonwork/commit/bddd231aedce48f663c2fb1637241e39b0ff186a

--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -1,5 +1,5 @@
 	<nav id="menu"><!--<div class="inner">-->
-	  <form method="get" action="file:///C:/Users/Nuanc/Documents/2021-2022/phonwork/phonwork/site/search">
+	  <form method="get" action="https://linguistics.berkeley.edu/phonwork/search">
         <input type="search" name="q" id="menuSearch" placeholder="Exercise Search.." title="Type in an exercise">
       </form>
       <h2>Menu</h2>
